@@ -156,6 +156,10 @@ def test_suite():
             setUp=testing.setUp, tearDown=testing.tearDown,
             optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
             ),
+        doctest.DocTestSuite(batch,
+            setUp=testing.setUp, tearDown=testing.tearDown,
+            optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,
+            ),
         unittest.makeSuite(TestTable),
         unittest.makeSuite(TestSequenceTable),
         unittest.makeSuite(TestColumn),
